--- a/css/custom/_base.scss
+++ b/css/custom/_base.scss
@@ -19,6 +19,19 @@ button.yellow-background {
     margin-top: 30px;
 }
 
+// Foundation overrides
+
+.small-full-width {
+
+    padding: 0;
+
+    &>.row {
+
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 /* --------------------- */
 /* --- HEADER/FOOTER --- */
 /* --------------------- */
